Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-77161

qtlauncher settings use hard-coded values and styles with wrong organization name

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • 5.12
    • 5.13.0
    • Device Creation
    • None
    • f89cf3ae354de42df46588d50a3ad0816cc8fc28, 98e2286411f0867257d99292cb085aa52d18d6b0

    Description

      • The path to qtquickcontrols2.conf and icons folder is hard-coded in qtlauncher main function. This path could be included in the qtlauncher settings file instead.
      • The style settings for qtlauncher is creating settings under ".config/Unknown organization/qtlauncher.conf", the proper organization name is required.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              assam Assam Boudjelthia
              assam Assam Boudjelthia
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes