Use applicationsRoot path from settings file instead of hard-coding

* The applications root path will be moved to the yocto  repository
instead.
* Use the same settings file for style, the previous style settings was
not assigned an organization also.

Task-number: QTBUG-77161
Change-Id: I8c13898c8430eefa85586ec8928dfabccb10ef0b
Reviewed-by: Kari Hormi <kari.hormi@qt.io>